--- a/force-app/main/default/pages/USTEventAddToCalendar.page
+++ b/force-app/main/default/pages/USTEventAddToCalendar.page
@@ -12,7 +12,7 @@ DTEND;TZID=America/Chicago:{!DTEND}
 DTSTAMP:{!DTSTAMP}
 SUMMARY:{!SUMMARY}
 DESCRIPTION:{!DESCRIPTION}
-LOCATION: University of St. Thomas
+LOCATION: UST Event
 UID:{!UUID}
 END:VEVENT
 END:VCALENDAR
