Code merge from ERx version of UST Events with lots of features: Capcity if feed, contact creation options, Hand raise action, toggle (not functioning in EDA yet), Sport interest tracking, more robust scratch org data

--- a/force-app/main/default/layouts/UST_Event_Registration__c-UG Event Registration Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/UST_Event_Registration__c-UG Event Registration Layout.layout-meta.xml
@@ -246,8 +246,6 @@
                 <behavior>Edit</behavior>
                 <field>Relationship_to_St_Thomas__c</field>
             </layoutItems>
-        </layoutColumns>
-        <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Registrant_High_School__c</field>
@@ -260,6 +258,8 @@
                 <behavior>Edit</behavior>
                 <field>Registrant_High_School_Grad_Year__c</field>
             </layoutItems>
+        </layoutColumns>
+        <layoutColumns>
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Registrant_College__c</field>
@@ -307,6 +307,26 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Registrant_Parent_Phone__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Registrant_Other_First_Name__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Registrant_Other_Last_Name__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Registrant_Other_Email__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Registrant_Other_Phone__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Registrant_Other_Relationship__c</field>
             </layoutItems>
             <layoutItems>
                 <emptySpace>true</emptySpace>
@@ -415,7 +435,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hn0000000RcP6</masterLabel>
+        <masterLabel>00h3F000001NPZM</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
