--- a/force-app/main/default/layouts/UST_Event__c-Graduate Event Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/UST_Event__c-Graduate Event Layout.layout-meta.xml
@@ -33,15 +33,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Alternate_Registration_URL__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Program_Filter_2__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Program_Filter_3__c</field>
+                <field>Contact_Creation__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -52,6 +44,10 @@
             <layoutItems>
                 <behavior>Required</behavior>
                 <field>Template__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Alternate_Registration_URL__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -102,6 +98,10 @@
                 <behavior>Edit</behavior>
                 <field>Portal_Login_Required__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Ask_Date_Of_Birth__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -123,6 +123,10 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Ask_Gender__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Hand_Raise_Action__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -489,7 +493,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hn0000000RcOm</masterLabel>
+        <masterLabel>00h3F000001NPZG</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
