--- a/force-app/main/default/layouts/UST_Event__c-UDAR Event Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/UST_Event__c-UDAR Event Layout.layout-meta.xml
@@ -42,6 +42,10 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
+                <field>Contact_Creation__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
                 <field>Private_Event__c</field>
             </layoutItems>
         </layoutColumns>
@@ -460,7 +464,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hn0000000RcOY</masterLabel>
+        <masterLabel>00h3F000001NPZN</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
