--- a/force-app/main/default/layouts/UST_Event__c-UG Event Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/UST_Event__c-UG Event Layout.layout-meta.xml
@@ -34,7 +34,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Alternate_Registration_URL__c</field>
+                <field>Contact_Creation__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -57,6 +57,10 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>RecordTypeId</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Alternate_Registration_URL__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
@@ -95,6 +99,10 @@
                 <behavior>Edit</behavior>
                 <field>Portal_Login_Required__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Ask_Date_Of_Birth__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -116,6 +124,10 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Ask_Gender__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Hand_Raise_Action__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -499,7 +511,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3D000000zHXT</masterLabel>
+        <masterLabel>00h3F000001NPZO</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
