--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -20,38 +20,54 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="row">
                 <div class="columns errorMessages">
-                    <apex:messages />
+                    <apex:messages/>
+                    <apex:outputText escape="false" value="{!headers}"></apex:outputText>
                 </div>
             </div>
-            <apex:form id="SummitEventsRegisterSubmitForm" html-data-abide="ajax" html-novalidate="novalidate">
-                <div class="row">
-                    <div class="columns eventCrumb">
-                        <span class="eventName">{!eventPage.Event_Name__c}</span>
+
+            <div class="row">
+                <div class="columns eventCrumb">
+                    <span class="eventName">{!eventPage.Event_Name__c}</span>
+                    <span class="bc-spacer"><span>»</span></span>
+                    <apex:outputPanel layout="none" rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}">
+                        <span class="eventInstance">{!evtInstance.Instance_Title__c}</span>
+                    </apex:outputPanel>
+                    <apex:outputPanel layout="inline" styleClass="eventDate" rendered="{!IF(!ISBLANK(evtInstance.Start_Date_Time__c) && !ISBLANK(evtInstance.Start_Date_Time__c),true,false)}">
                         <span class="bc-spacer"><span>»</span></span>
-                        <apex:outputPanel layout="none" rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}">
-                            <span class="eventInstance">{!evtInstance.Instance_Title__c}</span>
-                        </apex:outputPanel>
-                        <apex:outputPanel layout="inline" styleClass="eventDate" rendered="{!IF(!ISBLANK(evtInstance.Start_Date_Time__c) && !ISBLANK(evtInstance.Start_Date_Time__c),true,false)}">
-                            <span class="bc-spacer"><span>»</span></span>
-                            {!eventStartDateTimeCrumb}
-                        </apex:outputPanel>
-                    </div>
+                        {!eventStartDateTimeCrumb}
+                    </apex:outputPanel>
                 </div>
-                <div class="row">
-                    <div class="column">
-                        <h2>
-                            <apex:outputText escape="false" value="{!eventPage.Event_Submit_Title__c}"/>
-                        </h2>
-                        <p>
-                            <apex:outputText escape="false" value="{!eventPage.Event_Submit_Description__c}"/>
-                        </p>
-                    </div>
+            </div>
+            <apex:outputPanel layout="block" rendered="{!successReturnFromGateway}" styleClass="row">
+                <div class="column">
+                    <script>fadeout();</script>
+                    <h2>Please hold on...</h2>
+                    <p>As we process your payment.</p>
                 </div>
-                <div class="row">
-                    <div class="column">
-                        <apex:outputText escape="false" value="{!chosenFormatted}"/>
-                    </div>
+            </apex:outputPanel>
+
+            <apex:outputPanel layout="block" rendered="{!!successReturnFromGateway}" styleClass="row">
+                <div class="column">
+                    <h2>
+                        <apex:outputText escape="false" value="{!eventPage.Event_Submit_Title__c}"/>
+                    </h2>
+                    <p>
+                        <apex:outputText escape="false" value="{!eventPage.Event_Submit_Description__c}"/>
+                    </p>
+                    <apex:outputText escape="false" value="{!chosenFormatted}"/>
                 </div>
+            </apex:outputPanel>
+            <apex:outputPanel layout="block" rendered="{!showPaymentButton}" styleClass="row">
+                <div class="column">
+                    <h2>Cost</h2>
+                    <p>
+                        <apex:outputText value="${0, number, ###,###,###,##0.00}">
+                            <apex:param value="{!paymentAmount}"/>
+                        </apex:outputText>
+                    </p>
+                </div>
+            </apex:outputPanel>
+            <apex:form id="USTRegistraterSubmitForm" html-data-abide="ajax" html-novalidate="novalidate" rendered="{!!showPaymentButton}">
                 <div class="row">
                     <div class="column">
                         <p>
@@ -60,14 +76,30 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="column">
-                        <p>
-                            <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"></apex:outputText>
-                        </p>
-                    </div>
-                </div>
             </apex:form>
+
+            <!--Payment Gateway if needed-->
+            <apex:outputPanel rendered="{!showPaymentButton && paymentAmount != null && paymentAmount > 0}">
+                <form id="upayForm" action="{!upayURL}" method="post">
+                    <div class="row">
+                        <div class="column">
+                            <input id="TICKET_NAME" type="hidden" name="TICKET_NAME" value="{!ticketName}"/>
+                            <input id="TICKET" type="hidden" name="TICKET" value="{!ticket}"/>
+                            <input id="UPAY_SITE_ID" type="hidden" name="UPAY_SITE_ID" value="{!upayId}"/>
+                            <a href="javascript:;" onclick="fadeout(); document.getElementById('upayForm').submit();" class="button confirmContinue">Submit and Pay</a>
+
+                            <a href="{!IF(eventHasOptions, communityBaseURL + 'usteventregistrationoptions', communityBaseURL +'usteventregister')}" onclick="fadeout();" class="button previous">Previous</a>
+                        </div>
+                    </div>
+                </form>
+            </apex:outputPanel>
+            <div class="row">
+                <div class="column">
+                    <p>
+                        <apex:outputText escape="false" value="{!EventPage.Event_Footer__c}"></apex:outputText>
+                    </p>
+                </div>
+            </div>
             <apex:outputText escape="false" value="{!eventPage.Tracking_Submit_Registration__c}"></apex:outputText>
         </apex:define>
     </apex:composition>
