updated layouts for event and registration to show fee related list

--- a/force-app/main/default/layouts/Summit_Events_Registration__c-UDAR Event Registration Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Registration__c-UDAR Event Registration Layout.layout-meta.xml
@@ -336,6 +336,14 @@
         <relatedList>RelatedHistoryList</relatedList>
     </relatedLists>
     <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Summit_Events_Fee__c.Event_Registration__c</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Summit_Events_Payment__c.Event_Registration__c</relatedList>
+    </relatedLists>
+    <relatedLists>
         <relatedList>RelatedEntityHistoryList</relatedList>
     </relatedLists>
     <relatedLists>
@@ -358,7 +366,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00hn0000000RnP7</masterLabel>
+        <masterLabel>00h3F000001rRRC</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
