--- a/force-app/main/default/pages/SummitEventsRegisterAppointments.page
+++ b/force-app/main/default/pages/SummitEventsRegisterAppointments.page
@@ -9,24 +9,57 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
     <apex:composition template="{!templateSelected}">
         <apex:define name="metaPageTitle">
             {!eventPage.Event_Name__c}
-            <apex:outputText rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}" value="{! ' - ' + evtInstance.Instance_Title__c}" />
+            <apex:outputText rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}" value="{! ' - ' + evtInstance.Instance_Title__c}"/>
             - Options
         </apex:define>
         <apex:define name="pageTitle"><a href="{!eventPage.Event_Home_Link_URL__c}">{!eventPage.Event_Home_Link_Title__c}</a></apex:define>
-        <apex:define name="afterJquery"> 
+        <apex:define name="afterJquery">
+            <script>
+                var allAppts = {!appointmentJSON};
+            </script>
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
-            <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/options.js')}" type="text/javascript"/>
-            <script src="{!URLFOR($Resource.SummitEventsAssets, '/chosen/chosen.ust.jquery.min.js')}" type="text/javascript"/>
+            <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/appointments.js')}" type="text/javascript"/>
+            <script>
+                function sendAppointmentInfo(apptTypeId, apptGroupId, apptId, apptSeletcted, apptValue) {
+                    Visualforce.remoting.Manager.invokeAction(
+                        '{!$RemoteAction.SummitEventsRegisterAppointmentCtlr.processAppointments}',
+                        apptTypeId, apptGroupId, apptId, apptSeletcted, apptValue, '{!evtinfo.evtRegId}',
+                        function (result, event) {
+                            if (event.status) {
+                                // // Get DOM IDs for HTML and Visualforce elements like this
+                                // document.getElementById('remoteAcctId').innerHTML = result.Id
+                                // document.getElementById(
+                                //     "{!$Component.block.blockSection.secondItem.acctNumEmployees}"
+                                // ).innerHTML = result.NumberOfEmployees;
+                            } else if (event.type === 'exception') {
+                                document.getElementById("responseErrors").innerHTML =
+                                    event.message + "<br/>\n<pre>" + event.where + "</pre>";
+                            } else {
+                                document.getElementById("responseErrors").innerHTML = event.message;
+                            }
+                        },
+                        {escape: true}
+                    );
+                }
+            </script>
         </apex:define>
         <apex:define name="sectionNav"/>
         <apex:define name="body">
             <div class="row">
                 <div class="columns errorMessages">
-                    <apex:messages />
+                    <apex:messages/>
                     <apex:outputText escape="false" value="{!test}"/>
                 </div>
             </div>
-            <apex:form id="SummitEventsRegisterAppointmentsForm" html-data-abide="ajax" html-novalidate="novalidate">
+
+            <!--            <apex:form>-->
+            <!--                <apex:actionFunction action="{!processAppointments}" name="processAppointments">-->
+            <!--                    <apex:param name="firstParam" assignTo="{!appointmentJSON}" value=""/>-->
+            <!--                </apex:actionFunction>-->
+            <!--            </apex:form>-->
+
+            <apex:form id="SummitRegisterOptionForm" html-data-abide="ajax" html-novalidate="novalidate">
+
                 <div class="row">
                     <div class="columns eventCrumb">
                         <span class="eventName">{!eventPage.Event_Name__c}</span>
@@ -61,7 +94,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     <div class="{!IF(noOptionalAppointments, 'columns small-12 menium-12 large-12', 'columns small-12 menium-6 large-6')}">
                         <h4>Selected options</h4>
                         <div id="choosen">
-                            <apex:outputText escape="false" value="{!chosenFormatted}"/>
+                            <!--                            <apex:outputText escape="false" value="{!chosenFormatted}"/>-->
                         </div>
                         <p>&nbsp;</p>
                         <p><em>Once you have selected all your appointments click next.</em></p>
